--- a/parckman/index.html
+++ b/parckman/index.html
@@ -214,25 +214,32 @@
       });
     }
 
-    function moveNPCToNextPoint(npc) {
-      const target = npc.route[npc.routeIndex];
-      const angle = Phaser.Math.Angle.Between(npc.x, npc.y, target.x, target.y);
+	function moveNPCToNextPoint(npc) {
+	  const target = npc.route[npc.routeIndex];
+	  const angle = Phaser.Math.Angle.Between(npc.x, npc.y, target.x, target.y);
 
-      // Расстояние до парковочного места (последняя точка маршрута)
-      const parkingSpot = npc.route[npc.route.length - 1];
-      const distanceToParkingSpot = Phaser.Math.Distance.Between(npc.x, npc.y, parkingSpot.x, parkingSpot.y);
+	  // Расстояние до парковочного места (последняя точка маршрута)
+	  const parkingSpot = npc.route[npc.route.length - 1];
+	  const distanceToParkingSpot = Phaser.Math.Distance.Between(npc.x, npc.y, parkingSpot.x, parkingSpot.y);
 
-      // Замедление, если NPC находится на последних этапах маршрута и в радиусе 50 пикселей от парковочного места
-      const isParkingMovement = (
-        npc.routeIndex >= npc.route.length - 3 && // Последние 3 точки маршрута
-        distanceToParkingSpot <= 50 // Расстояние до парковочного места меньше 50 пикселей
-      );
-      const speed = isParkingMovement ? npcParkingSpeed : npcSpeed;
+	  // Замедление, если NPC находится на последних этапах маршрута и в радиусе 50 пикселей от парковочного места
+	  const isParkingMovement = (
+		npc.routeIndex >= npc.route.length - 3 && // Последние 3 точки маршрута
+		distanceToParkingSpot <= 50 // Расстояние до парковочного места меньше 50 пикселей
+	  );
+	  const speed = isParkingMovement ? npcParkingSpeed : npcSpeed;
 
-      // Устанавливаем скорость и поворот NPC
-      npc.setVelocity(Math.cos(angle) * speed, Math.sin(angle) * speed);
-      npc.rotation = angle + Math.PI / 2;
-    }
+	  // Устанавливаем скорость
+	  npc.setVelocity(Math.cos(angle) * speed, Math.sin(angle) * speed);
+
+	  // Принудительный поворот на 90 градусов при парковке и выезде
+	  if (isParkingMovement) {
+		npc.rotation = Math.PI / 2; // 90 градусов
+	  } else {
+		// Обычный поворот в направлении движения
+		npc.rotation = angle + Math.PI / 2;
+	  }
+	}
 
     function createInvisibleParkingSpots(scene) {
       // Добавляем невидимые парковочные места
